# miscellaneous

./: A.txt  A1.txt  A10.txt  A3.txt  A4.txt  Untitled 1.ods  a.cpp  a.txt  b.txt  b1.txt  b10.txt  b3.txt  b4.txt  fraction_representation.cpp  gaussj.ods  gaussjordanfp.cpp  main.cpp  operator_overloading.cpp  permutation.cpp  solver.h  type.h
cmakeProj2/: CMakeLists.txt  a.txt
cmakeProj2/Matrix/: CMakeLists.txt
cmakeProj2/Matrix/include/: LUdecomp.h  bandec.h  matrix.h  solvers.h
cmakeProj2/Matrix/src/: banmul.cpp  tridiag.cpp
cmakeProj2/example/: main.cpp
project/: CMakeLists.txt
project/example/: CMakeLists.txt  main.cpp
project/fraction/: CMakeLists.txt
project/fraction/include/: fraction.h
project/fraction/src/: fraction.cpp
project/operation/: CMakeLists.txt
project/operation/include/: operation.h
project/operation/src/: operation.cpp
project2/Matrix/include/: matrix.h
project2/Matrix/src/: gaussj.cpp
project2/example/: CMakeLists.txt  main.cpp
vscode_ config/: launch.json  tasks.json
